feat(api,ui): Système de DONE/NOT-DONE pour les devoirs